    fail
    - add d/p/test-overrides/disable-failing-python-tests.patch
    - update debian/patches/series.in
  * Unbreak test_ubuntu_searchplugins.js after the install layout changes
    - update debian/testing/xpcshell-package-tests/xpcshell.ini
  * Unbreak test_locale_matchOS.js after the install layout changes
    - update debian/testing/xpcshell-package-tests/test_locale_matchOS_real.js

  [ Jean-Baptiste Lallement <jean-baptiste@ubuntu.com> ]
  * Allow the autopkgtest harness to specify a location for test results
    - update debian/tests/crashtest
    - update debian/tests/jstestbrowser
    - update debian/tests/mochitest
    - update debian/tests/reftest
    - update debian/tests/xpcshell-package-tests
    - update debian/tests/xpcshell-tests
    - update debian/build/mozbuild.mk

 -- Chris Coulson <chris.coulson@canonical.com>  Wed, 20 Feb 2013 18:56:12 +0000

firefox-trunk (21.0~a1~hg20130218r122221-0ubuntu1) raring; urgency=low

  * New upstream snapshot v21.0 A1 HG 20130218R122221

  * Drop support for building on older than precise
    - update debian/apport/source_firefox.py.in
    - update debian/build/mozbuild.mk
    - update debian/config/mozconfig.in
    - update debian/control.in
    - update debian/firefox-globalmenu.dirs.in
    - remove debian/firefox-restart-required.update-notifier.in
    - update debian/firefox.desktop.in
    - update debian/firefox.install.in
    - update debian/firefox.links.in
    - update debian/firefox.postinst.in
    - update debian/firefox.postrm.in
    - update debian/firefox.preinst.in
    - update debian/firefox.prerm.in
    - remove debian/patches/add-syspref-dir.patch
    - update debian/patches/series.in
    - remove debian/patches/use-new-yasm-in-lucid.patch
    - remove debian/patches/mozilla-kde.patch
    - remove debian/patches/firefox-kde.patch
    - update debian/rules
    - remove debian/usr.bin.firefox.apparmor.10.04
    - remove debian/usr.bin.firefox.apparmor.10.10